--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -93,7 +93,7 @@
             <MudText Align="Align.Left"><b>DURIAN GARDEN (POS)</b></MudText>
             <MudSpacer />
             <div class="navigation">
-                <a class="button" @onclick="Logout">
+                <a class="button" href="/" @onclick="Logout">
                     <img class="img2" src="cashier.png">
                     <div class="logout" style="color:black">LOGOUT</div>
                 </a>
