--- a/Components/Pages/Counter.razor
+++ b/Components/Pages/Counter.razor
@@ -222,7 +222,7 @@
     <MudTextField T="string" Clearable @bind-Value="txtsearch" TextChanged="Search" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.Search" AdornmentColor="Color.Tertiary" Placeholder="What are you looking for?" Variant="Variant.Outlined" Margin="Margin.Dense" />
     <MudSpacer /> <MudSpacer /> <MudSpacer />
     <div class="navigation">
-        <a class="button" href="" @onclick="Logout">
+        <a class="button" href="/" @onclick="Logout">
             <img src="cashier.png" />
             <div class="logout" style="color:black">LOGOUT</div>
         </a>
