--- a/Components/Pages/Products.razor
+++ b/Components/Pages/Products.razor
@@ -35,21 +35,41 @@
     <div class="row">
         @if (p != null && p.Any())
         {
+            <!-- Product Form Section (Left Column) -->
             <div class="col-sm-4">
                 <EditForm Model="@_p" OnValidSubmit="OnValidSubmit">
                     <DataAnnotationsValidator />
                     <MudContainer Style="max-height: 600px;">
+
+                        <!-- Photo Upload Section -->
                         <div class="photo">
                             <MudFileUpload T="IBrowserFile" FilesChanged="UploadFiles" Accept=".png,.jpg,.jpeg">
                                 <ActivatorContent>
-                                    <img src="@imgsrc" width="250" height="250" style="border:1px solid gray; margin-top:10px; border-radius:5px;" />
+                                    <img src="@imgsrc" width="250" height="250" style="border: 1px solid gray; margin-top: 10px; border-radius: 5px;" />
                                 </ActivatorContent>
                             </MudFileUpload>
                         </div><br />
-                        <div><p>Product Code</p><MudTextField @bind-Value="@_p.code" Clearable For="@(() => _p.code)" Variant="Variant.Outlined" Margin="Margin.Dense" /></div><br />
-                        <div><p>Product Name</p><MudTextField @bind-Value="@_p.name" Clearable For="@(() => _p.name)" Variant="Variant.Outlined" Margin="Margin.Dense" /></div><br />
-                        <div><p>Product Price</p><MudTextField @bind-Value="@_p.price" Clearable For="@(() => _p.price)" Variant="Variant.Outlined" Margin="Margin.Dense" /></div>
+
+                        <!-- Product Code Input -->
+                        <div>
+                            <p>Product Code</p>
+                            <MudTextField @bind-Value="@_p.code" Clearable For="@(() => _p.code)" Variant="Variant.Outlined" Margin="Margin.Dense" />
+                        </div><br />
+
+                        <!-- Product Name Input -->
+                        <div>
+                            <p>Product Name</p>
+                            <MudTextField @bind-Value="@_p.name" Clearable For="@(() => _p.name)" Variant="Variant.Outlined" Margin="Margin.Dense" />
+                        </div><br />
+
+                        <!-- Product Price Input -->
+                        <div>
+                            <p>Product Price</p>
+                            <MudTextField @bind-Value="@_p.price" Clearable For="@(() => _p.price)" Variant="Variant.Outlined" Margin="Margin.Dense" />
+                        </div>
                     </MudContainer>
+
+                    <!-- Action Buttons -->
                     <MudToolBar>
                         <MudSpacer />
                         <MudButton>Clear</MudButton>
@@ -57,24 +77,34 @@
                     </MudToolBar>
                 </EditForm>
             </div>
+
+            <!-- Product List Section (Right Column) -->
             <div class="col-sm-8">
                 <MudTable Class="ma-5" Dense="true" Hover="true" Items="@p" HorizontalScrollbar="true" FixedHeader="@fixed_header" FixedFooter="@fixed_footer" Height="@(fixed_header || fixed_footer ? "455px" : "")">
+
+                    <!-- Table Toolbar -->
                     <ToolBarContent>
                         <MudToolBar>
                             <h5><u>Product List</u></h5> &nbsp;&nbsp;&nbsp;
                             <MudIconButton Icon="@Icons.Material.Filled.Refresh" @onclick="Refresh" Variant="Variant.Filled" Color="Color.Tertiary" Size="Size.Small" />
                         </MudToolBar>
                     </ToolBarContent>
+
+                    <!-- Table Header -->
                     <HeaderContent>
-                        <MudTh Style="height:50px;">Photo</MudTh>
+                        <MudTh Style="height: 50px;">Photo</MudTh>
                         <MudTh>Product Code</MudTh>
                         <MudTh>Product Name</MudTh>
                         <MudTh>Price</MudTh>
                         <MudTh>Status</MudTh>
                         <MudTh>Action</MudTh>
                     </HeaderContent>
+
+                    <!-- Table Rows -->
                     <RowTemplate>
-                        <MudTd DataLabel="Photo"><img src="data:image/bmp;base64, @(Convert.ToBase64String(@context.photo))" class="img" /></MudTd>
+                        <MudTd DataLabel="Photo">
+                            <img src="data:image/bmp;base64, @(Convert.ToBase64String(@context.photo))" class="img" />
+                        </MudTd>
                         <MudTd DataLabel="Code">@context.code</MudTd>
                         <MudTd DataLabel="Name">@context.name</MudTd>
                         <MudTd DataLabel="Price">@context.price</MudTd>
@@ -93,19 +123,31 @@
                         </MudTd>
                     </RowTemplate>
                 </MudTable>
+
+                <!-- Product Search Section -->
                 <MudToolBar Justify="Justify.End">
-                    <MudTextField @bind-Value="txtsearch" Clearable TextChanged="Search" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.Search" AdornmentColor="Color.Tertiary" Label="What are you looking for?" Variant="Variant.Outlined" Margin="Margin.Dense" />
+                    <MudTextField @bind-Value="txtsearch"
+                                  Clearable
+                                  TextChanged="Search"
+                                  Adornment="Adornment.End"
+                                  AdornmentIcon="@Icons.Material.Filled.Search"
+                                  AdornmentColor="Color.Tertiary"
+                                  Label="What are you looking for?"
+                                  Variant="Variant.Outlined"
+                                  Margin="Margin.Dense" />
                 </MudToolBar>
             </div>
         }
         else
         {
+            <!-- Loader Section (if no products found) -->
             <div class="d-flex justify-content-center my-4 centered">
                 <div class="loader"></div>
             </div>
         }
     </div>
 </div>
+
 
 @code {
     private products[]? p;
